--- a/emu/CMakeLists.txt
+++ b/emu/CMakeLists.txt
@@ -1,38 +1,87 @@
-cmake_minimum_required(VERSION 3.19)
+cmake_minimum_required(VERSION 3.5)
+
 project(emu VERSION 0.1 LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
+set(CMAKE_AUTOUIC ON)
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
+
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 cmake_policy(SET CMP0048 NEW)
+
+# QtCreator supports the following variables for Android, which are identical to qmake Android variables.
+# Check http://doc.qt.io/qt-5/deployment-android.html for more information.
+# They need to be set before the find_package(Qt5 ...) call.
+
+#if(ANDROID)
+#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
+#    if (ANDROID_ABI STREQUAL "armeabi-v7a")
+#        set(ANDROID_EXTRA_LIBS
+#            ${CMAKE_CURRENT_SOURCE_DIR}/path/to/libcrypto.so
+#            ${CMAKE_CURRENT_SOURCE_DIR}/path/to/libssl.so)
+#    endif()
+#endif()
 
 find_package(PkgConfig)
 pkg_search_module(GTEST REQUIRED gtest_main)
 
+find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets REQUIRED)
+find_package(QT NAMES Qt6 Qt5 COMPONENTS Svg REQUIRED)
+find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets REQUIRED)
+find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Svg REQUIRED)
 include_directories("include")
-add_executable(
+
+add_executable(emu
+        src/gui/main.cpp
+        src/gui/mainwindow.cpp
+        src/gui/mainwindow.h
+        include/clock.h src/cpu/clock.cpp
+        include/backplane.h src/cpu/backplane.cpp
+        src/cpu/systembus.cpp include/systembus.h
+        src/cpu/register.cpp include/register.h
+        src/cpu/addressregister.cpp include/addressregister.h
+        src/cpu/component.cpp include/component.h
+        src/cpu/memory.cpp include/memory.h
+        src/cpu/controller.cpp include/controller.h
+        src/gui/qled.cpp include/qled.h)
+
+target_link_libraries(
         emu
-        main.cpp
-        include/clock.h src/clock.cpp
-        include/system.h
-        src/lines.cpp include/lines.h
-        src/register.cpp include/register.h
-        src/addressregister.cpp include/addressregister.h
-        src/component.cpp include/component.h
-        src/memory.cpp include/memory.h
-        src/controller.cpp include/controller.h include/realsystem.h src/realsystem.cpp)
+        PRIVATE
+        Qt${QT_VERSION_MAJOR}::Svg
+        Qt${QT_VERSION_MAJOR}::Widgets
+        Qt${QT_VERSION_MAJOR}::Core
+)
+
+add_executable(emu_cmdline
+        src/cpu/emu.cpp
+        include/clock.h src/cpu/clock.cpp
+        include/backplane.h src/cpu/backplane.cpp
+        src/cpu/systembus.cpp include/systembus.h
+        src/cpu/register.cpp include/register.h
+        src/cpu/addressregister.cpp include/addressregister.h
+        src/cpu/component.cpp include/component.h
+        src/cpu/memory.cpp include/memory.h
+        src/cpu/controller.cpp include/controller.h
+)
 
 add_executable(
-        emu_test
-        test/clock.cpp
-        include/clock.h src/clock.cpp
-        include/system.h
-        test/mocksystem.h
-        include/addressregister.h src/addressregister.cpp
-        include/memory.h src/memory.cpp
-        include/register.h src/register.cpp
-        test/register.cpp
-        test/addressregister.cpp
-        test/memory.cpp
+    emu_test
+    src/test/clock.cpp
+    include/clock.h src/cpu/clock.cpp
+    include/component.h src/cpu/component.cpp
+    include/systembus.h src/cpu/systembus.cpp
+    include/harness.h
+    include/addressregister.h src/cpu/addressregister.cpp
+    include/memory.h src/cpu/memory.cpp
+    include/register.h src/cpu/register.cpp
+    src/test/clock.cpp
+    src/test/register.cpp
+    src/test/addressregister.cpp
+    src/test/memory.cpp
 )
 
 target_link_libraries(emu_test ${GTEST_LDFLAGS})
@@ -40,4 +89,5 @@ target_compile_options(emu_test PUBLIC ${GTEST_CFLAGS})
 
 include(CTest)
 add_test(first_and_only_test emu_test)
+
 
